// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtn.ts should be removable 1`] = `

<span tabindex="0"
      class="v-chip v-chip--removable theme--light"
>
  <span class="v-chip__content">
    <div class="v-chip__close">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.delete
      </i>
    </div>
  </span>
</span>

`;

exports[`VBtn.ts should be removable 2`] = `

<span tabindex="0"
      class="v-chip v-chip--removable theme--light"
      style="display: none;"
>
  <span class="v-chip__content">
    <div class="v-chip__close">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        $vuetify.icons.delete
      </i>
    </div>
  </span>
</span>

`;

exports[`VBtn.ts should have a v-chip class 1`] = `

<span tabindex="0"
      class="v-chip theme--light"
>
  <span class="v-chip__content">
  </span>
</span>

`;
